--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,38 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.jvnet.jaxb2.maven2</groupId>
+				<artifactId>maven-jaxb2-plugin</artifactId>
+				<version>0.7.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<generateDirectory>src/main/java</generateDirectory>
+					<generatePackage>org.lsc.configuration</generatePackage>
+					<bindingDirectory>src/main/resources/schemas</bindingDirectory>
+					<bindingIncludes><bindingInclude>lsc-core-2.0.xjc</bindingInclude></bindingIncludes>
+					<schemaDirectory>src/main/resources/schemas</schemaDirectory>
+					<schemaIncludes>
+						<schemaInclude>lsc-core-2.0.xsd</schemaInclude>
+					</schemaIncludes>
+					<extension>true</extension>
+					<args><arg>-Xdefault-value</arg></args>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.jvnet.jaxb2_commons</groupId>
+						<artifactId>jaxb2-default-value</artifactId>
+						<version>1.1</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 
 		<pluginManagement>
