--- a/pom.xml
+++ b/pom.xml
@@ -293,6 +293,7 @@
 					</execution>
 				</executions>
 				<configuration>
+					<episode>true</episode>
 					<generateDirectory>src/main/java</generateDirectory>
 					<generatePackage>org.lsc.configuration</generatePackage>
 					<bindingDirectory>src/main/resources/schemas</bindingDirectory>
