--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,14 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>2.3.7</version>
+				<inherited>true</inherited>
+				<extensions>true</extensions>
+			</plugin>
+
+			<plugin>
 				<groupId>org.jvnet.jaxb2.maven2</groupId>
 				<artifactId>maven-jaxb2-plugin</artifactId>
 				<version>0.7.3</version>
@@ -786,38 +794,52 @@
 			<version>1.7.0</version>
 		</dependency>
 		<dependency>
-	      <groupId>org.apache.directory.server</groupId>
-	      <artifactId>apacheds-all</artifactId>
-	      <version>1.5.7</version>
-	      <exclusions>
-	      	<exclusion>
-	      		<groupId>org.slf4j</groupId>
-	      		<artifactId>slf4j-api</artifactId>
-	      	</exclusion>
-	      </exclusions>
-	    </dependency>  
-	    <dependency>
-	      <groupId>org.apache.directory.server</groupId>
-	      <artifactId>apacheds-server-integ</artifactId>
-	      <version>1.5.7</version>
-	      <exclusions>
-	      	<exclusion>
-	      		<groupId>org.slf4j</groupId>
-	      		<artifactId>slf4j-api</artifactId>
-	      	</exclusion>
-	      </exclusions>
-	    </dependency>  
-	    <dependency>
-	      <groupId>org.apache.directory.server</groupId>
-	      <artifactId>apacheds-core-integ</artifactId>
-	      <version>1.5.7</version>
-	      <exclusions>
-	      	<exclusion>
-	      		<groupId>org.slf4j</groupId>
-	      		<artifactId>slf4j-api</artifactId>
-	      	</exclusion>
-	      </exclusions>
-	    </dependency>
+			<groupId>org.apache.directory.server</groupId>
+			<artifactId>apacheds-server-integ</artifactId>
+			<version>2.0.0-M6</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.directory.shared</groupId>
+					<artifactId>shared-ldap-schema</artifactId>
+				</exclusion>
+			</exclusions>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.directory.server</groupId>
+			<artifactId>apacheds-core-integ</artifactId>
+			<version>2.0.0-M6</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.directory.shared</groupId>
+					<artifactId>shared-ldap-schema</artifactId>
+				</exclusion>
+			</exclusions>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.directory.shared</groupId>
+			<artifactId>shared-all</artifactId>
+			<version>1.0.0-M11</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.directory.client.ldap</groupId>
+			<artifactId>ldap-client-api</artifactId>
+			<version>0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.directory.shared</groupId>
+			<artifactId>shared-ldap</artifactId>
+			<version>0.9.19</version>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
