--- a/pom.xml
+++ b/pom.xml
@@ -706,9 +706,9 @@
 			<optional>false</optional>
 		</dependency>
 		<dependency>
-			<groupId>rhino</groupId>
-			<artifactId>js</artifactId>
-			<version>1.7R2</version>
+			<groupId>org.mozilla</groupId>
+			<artifactId>rhino</artifactId>
+			<version>1.7R4</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
