--- a/pom.xml
+++ b/pom.xml
@@ -284,7 +284,7 @@
 			<plugin>
 				<groupId>org.jvnet.jaxb2.maven2</groupId>
 				<artifactId>maven-jaxb2-plugin</artifactId>
-				<version>0.7.3</version>
+				<version>0.8.3</version>
 				<executions>
 					<execution>
 						<goals>
@@ -305,6 +305,7 @@
 					</schemaIncludes>
 					<extension>true</extension>
 					<args><arg>-Xdefault-value</arg></args>
+					<cleanPackageDirectories>false</cleanPackageDirectories>
 				</configuration>
 				<dependencies>
 					<dependency>
