--- a/src/install/debian/rules
+++ b/src/install/debian/rules
@@ -1,10 +1,9 @@
 #!/usr/bin/make -f
 
-export JAVA_HOME=/usr/lib/jvm/java-6-sun
-
 # Put depended upon jars in here
 # export CLASSPATH=
 
 %:
-	dh --with javahelper $@
+	dh $@ 
 
+override_dh_compress:
