--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: java
 
 jdk:
+  - oraclejdk8
+  - oraclejdk7
   - openjdk7
-  - openjdk8
 
 notifications:
   irc: "irc.freenode.org#lsc-project"
