--- a/pom.xml
+++ b/pom.xml
@@ -393,6 +393,16 @@
 				</dependency>
 			</dependencies>
 			<build>
+                          <resources>
+                            <resource>
+                              <directory>src/main/resources-filtered</directory>
+                              <filtering>true</filtering>
+                            </resource>
+                            <resource>
+                              <directory>src/main/resources</directory>
+                              <filtering>false</filtering>
+                            </resource>
+                          </resources>
 				<plugins>
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
@@ -643,7 +653,7 @@
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
-			<version>1.2</version>
+			<version>1.3</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
