--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.10.1</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -118,7 +118,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8</version>
+				<version>3.4.1</version>
 				<configuration>
 					<show>public</show>
 					<quiet>true</quiet>
@@ -129,6 +129,10 @@
                             				<value>bar</value>
                         			</property>
                     			</javaApiLinks>
+                                        <source>8</source>
+                                        <detectJavaApiLink>false</detectJavaApiLink>
+                                        <!-- xsd generation creates invalid javadoc in java 8 those are errors -->
+                                        <doclint>none</doclint>
 				</configuration>
 				<executions>
 					<execution>
@@ -613,14 +617,14 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
+			<version>1.2.11</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.2.3</version>
+			<version>1.2.11</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
@@ -718,6 +722,9 @@
 			<artifactId>activation</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+                <!--
+                    jaxb 2.3.0 with maven-jaxb2-plugin 0.14.0
+                -->
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
@@ -727,12 +734,12 @@
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-core</artifactId>
 			<version>2.3.0</version>
-		</dependency>
+	        </dependency>
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
 			<version>2.3.0</version>
-		</dependency>
+	        </dependency>
 		<dependency>
 			<groupId>net.java.xadisk</groupId>
 			<artifactId>xadisk</artifactId>
