--- a/pom.xml
+++ b/pom.xml
@@ -100,9 +100,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-					<compilerVersion>1.6</compilerVersion>
+					<source>7</source>
+					<target>7</target>
+					<compilerVersion>1.8</compilerVersion>
 					<encoding>utf-8</encoding>
 				</configuration>
 				<executions>
@@ -541,10 +541,10 @@
 	</pluginRepositories>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.apache.ibatis</groupId>
-			<artifactId>ibatis-sqlmap</artifactId>
-			<version>2.3.4.726</version>
+                <dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis2</artifactId>
+			<version>2.4.4</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
