--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.11</version>
+				<version>3.0.0-M7</version>
 				<configuration>
 					<argLine>-Dcom.sun.management.jmxremote
 						-Dcom.sun.management.jmxremote.port=1099
