--- a/pom.xml
+++ b/pom.xml
@@ -234,7 +234,7 @@
 			<plugin>
 				<groupId>org.jvnet.jaxb2.maven2</groupId>
 				<artifactId>maven-jaxb2-plugin</artifactId>
-				<version>0.14.0</version>
+				<version>0.15.1</version>
 				<executions>
 					<execution>
 						<goals>
@@ -723,22 +723,22 @@
 			<version>1.1.1</version>
 		</dependency>
                 <!--
-                    jaxb 2.3.0 with maven-jaxb2-plugin 0.14.0
+                    jaxb 2.3.6 with maven-jaxb2-plugin 0.15.1
                 -->
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
-			<version>2.3.0</version>
+			<version>2.3.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
+			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-core</artifactId>
-			<version>2.3.0</version>
+			<version>2.3.0.1</version>
 	        </dependency>
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
-			<version>2.3.0</version>
+			<version>2.3.6</version>
 	        </dependency>
 		<dependency>
 			<groupId>net.java.xadisk</groupId>
