--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 		<tapestry-release-version>5.2.5</tapestry-release-version>
 		<jmockit-version>1.5</jmockit-version>
 		<javadoc.opts>-Xdoclint:none</javadoc.opts>
-		<graalvm.version>22.2.0</graalvm.version>
+		<graalvm.version>22.3.1</graalvm.version>
 		<compiler.dir>${project.build.directory}/compiler</compiler.dir>
 	</properties>
 
@@ -86,7 +86,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M7</version>
+				<version>3.0.0-M8</version>
 				<configuration>
 					<argLine>-Dcom.sun.management.jmxremote
 						-Dcom.sun.management.jmxremote.port=1099
@@ -103,7 +103,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.10</version>
+				<version>3.5.0</version>
 				<executions>
 					<execution>
 						<id>copy</id>
@@ -533,7 +533,7 @@
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>build-helper-maven-plugin</artifactId>
-						<version>1.7</version>
+						<version>3.3.0</version>
 						<executions>
 							<execution>
 								<id>add-source</id>
@@ -566,16 +566,16 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.3</version><!--$NO-MVN-MAN-VER$ -->
+						<version>3.1.0</version>
 						<executions>
 							<execution>
 								<id>startLdapServer</id>
 								<phase>test-compile</phase>
 								<configuration>
-									<tasks unless="maven.test.skip">
+									<target unless="maven.test.skip">
 										<property name="execution.path" refid="maven.runtime.classpath" />
 										<ant antfile="${basedir}/misc/build-runldap.xml" target="startLdapServer" />
-									</tasks>
+									</target>
 								</configuration>
 								<goals>
 									<goal>run</goal>
@@ -585,11 +585,11 @@
 								<id>stopLdapServer</id>
 								<phase>test</phase>
 								<configuration>
-									<tasks unless="maven.test.skip">
+									<target unless="maven.test.skip">
 										<property name="execution.path" refid="maven.runtime.classpath" />
 										<property name="plugin.path" refid="maven.plugin.classpath" />
 										<ant antfile="${basedir}/misc/build-runldap.xml" target="stopLdapServer" />
-									</tasks>
+									</target>
 								</configuration>
 								<goals>
 									<goal>run</goal>
@@ -609,7 +609,7 @@
 				<dependency>
 					<groupId>postgresql</groupId>
 					<artifactId>postgresql</artifactId>
-					<version>8.4-702.jdbc4</version>
+					<version>9.1-901-1.jdbc4</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>
