--- a/pom.xml
+++ b/pom.xml
@@ -757,9 +757,9 @@
 			<version>4.1.10</version>
 		</dependency>
 		<dependency>
-			<groupId>bouncycastle</groupId>
-			<artifactId>bcprov-jdk16</artifactId>
-			<version>140</version>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk18on</artifactId>
+			<version>1.75</version>
 			<type>jar</type>
 			<optional>false</optional>
 		</dependency>
